[package]
name = "rust-wallet"
version = "0.1.0"
authors = ["Marcin GoÌrny <marcin.gorny.94@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
rust-crypto = "^0.2"
hex = "0.4.2"
rand = "0.7.3"
secp256k1 = "0.17.2"
sha3 = "0.8.2"
